--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -10,7 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="paises.js" defer></script>
-  
+
 </head>
 
 <body style="background-color:#75969c;">
@@ -21,57 +21,48 @@
         <div class="col-sm-10">
           <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
         </div>
-      </div>
-      <nav>
-        <div class="mt-3" >
-          <ul class="nav nav-tabs nav-justified" >
-            <li class="nav-item">
-              <a class="nav-link active" href="#" onclick="dameDatosGenerales()">DATOS GENERALES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#" onclick="pintaDatosGeograficos()">DATOS GEOGRAFICOS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#" onclick="dameTraducciones()">TRADUCCION</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#" onclick="dameBanderas()">BANDERA</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
     </header>
-    <div class="row align-middle">
 
-      <div class="col-sm-6">
-        <h2>continente</h2>
-
-        <select name="continente" onchange="cargarPaises(this.value)" class="form-select">
-          <option value="0">seleccione continente</option>
-          <option value="americas">AMERICA</option>
-          <option value="africa">AFRICA</option>
-          <option value="oceania">OCEANIA</option>
-          <option value="europe">EUROPA</option>
-          <option value="asia">ASIA</option>
-        </select>
-      </div>
-      <div class="col-sm-6">
-        <h2>paises</h2>
-        <select id="paises" class="form-select" onchange="cargaDatos(this.value)">
-         <!-- <option value="0">seleccione pais</option>-->
-
-        </select>
-      </div>
-      <main>
-      
-      </main>
-
-
+    <div class="container mt-3 fade" id="divSpecial">
+      <ul class="nav nav-pills nav-justified">
+        <li class="nav-item">
+          <button disabled class="nav-link active bg-success" href="#" onclick="dameDatosGenerales()">Datos
+            generales</button>
+        </li>
+        <li class="nav-item">
+          <button disabled class="nav-link active bg-success" href="#" onclick="pintaDatosGeograficos()">Datos
+            geograficos</button>
+        </li>
+        <li class="nav-item">
+          <button disabled class="nav-link active bg-success" href="#" onclick="dameTraducciones()">Traducción</button>
+        </li>
+        <li class="nav-item">
+          <button disabled class="nav-link active bg-success" href="#" onclick="dameBanderas()">Banderas</button>
+        </li>
+      </ul>
     </div>
-
+    <div class="row mt-5">
+      <div class="col">
+        <h2>Seleccione continente</h2>
+        <label for="sel1" class="form-label"></label>
+        <select class="form-select bg-success" name="sel1" onchange="cargarPaises(this.value)">
+          <option value="europe" onclick="cargarPaises(europe)">Europa</option>
+          <option value="americas" onclick="cargarPaises(americas)">America</option>
+          <option value="asia" onclick="cargarPaises(asia)">Asia</option>
+          <option value="africa" onclick="cargarPaises(africa)">Africa</option>
+          <option value="oceania" onclick="cargarPaises(oceania)">Oceania</option>
+        </select>
+      </div>
+      <div class="col">
+        <h2>Seleccione país</h2>
+        <label for="sel2" class="form-label"></label>
+        <select class="form-select bg-success " name="sel2" id="paises" onchange=cargarDatos(this.value)>
+          <option></option>
+        </select>
+      </div>
+      <main></main>
+    </div>
   </div>
-
-
 </body>
 
 </html>
