--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="nuevoProyectoPaises.js" defer></script>
-
+</head>
 </head>
 
 <body>
@@ -25,11 +23,11 @@
             </div>
         </header>
         <div class="fade" id="divspecial">
-            <nav class="text-center" id="nav">
+            <nav class="text-center" id="nav" >
                 <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
                 <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
-                <button disabled onclick="dameTraducciones()"  type="button" id="b3" class="btn btn-info">Traducciones</button>
-                <button disabled onclick=dameBanderas() type="button" id="b4" class="btn btn-info">Banderas</button>
+                <button disabled onclick="dameTraducciones()" type="button" id="b3" class="btn btn-info">Traducciones</button>
+                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
             </nav>
         </div>
         <div class="tab-content mt-4">
@@ -37,7 +35,7 @@
                 <form action="" method="post">
                     <div class="row">
                         <div class="col">
-                            Continente :<select name="continente" class="form-select form-select-sm" onchange="cargarPaises(this.value)">
+                        Continente:<select name="continente" class="form-select-sm" onchange="cargarPaises(this.value)">
                                 <option value="0">Elige un continente</option>
                                 <option value="africa">Africa</option>
                                 <option value="americas">America</option>
@@ -47,16 +45,21 @@
                             </select>
                         </div>
                         <div class="col">
-                            País:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select form-select-sm">
+                            País:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select-sm">
                                 <option value="0">Elige un país</option>
                             </select>
                         </div>
                     </div>
                 </form>
             </div>
-            <main>
-           
-    </table>
-</body>
-
-</html>
+            <div class="container mt-3">
+                <h2>Traducciones</h2>
+                <p> Pais           Traducido</p>
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#divTRad" >Peru     جمهورية بيرو </button>
+                <div id="divTrad" class="collapse">
+                Irak,Iran,Egipto......
+                </div>
+             </div>
+        </body>
+        </html>
+ 
