--- a/index copy.html
+++ b/index copy.html
@@ -50,6 +50,10 @@
                                     data-bs-toggle="tab" data-bs-toggle="#generales">DATOS GENERALES</a>
                             </li>
                             <li class="nav-item" style="background-color: #EBECDE">
+                                <a href="#georgaficos" class="nav-link fw-bold" id="georgaficos-tab"
+                                    data-bs-toggle="tab" data-bs-toggle="#generales">DATOS GEORGAFICOS</a>
+                            </li>
+                            <li class="nav-item" style="background-color: #EBECDE">
                                 <a href="#traducir" class="nav-link fw-bold" id="tarducir-tab" data-bs-toggle="tab"
                                     data-bs-toggle="#traducir">TRADUCCIÓN</a>
                             </li>
@@ -131,6 +135,20 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="tab-content container mt-3">
+                    <div class="tab-pane face show" id="georgaficos">
+                        <div class="container mt-3">
+                            <div class="w-50 p-3 mx-auto overflow-hidden" style="background-color:  #abc2a7 ;">
+                                <div class="d-block">
+                                    <p><strong>Fronteras: </strong><span id="fronteras"></span></p>
+                                    <p><img src="" width="150"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
             <section>
                 <div class="tab-content container mt-3">
                     <div class="tab-pane face show" id="traducir">
