--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="visually-hidden">Loading...</span>
     </div>
     <div class="cursor">
-        
+
     </div>
     <main>
         <div class="container-fluid">
@@ -50,8 +50,8 @@
                     <div class="container-fluid">
                         <ul class="nav nav-justified" id="ex1">
                             <li class="nav-item">
-                                <a href="#generales" class="nav-link fw-bold" id="generales-tab"
-                                    data-bs-toggle="tab" data-bs-toggle="#generales">DATOS GENERALES</a>
+                                <a href="#generales" class="nav-link fw-bold" id="generales-tab" data-bs-toggle="tab"
+                                    data-bs-toggle="#generales">DATOS GENERALES</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#georgaficos" class="nav-link fw-bold" id="georgaficos-tab"
