--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -60,6 +60,8 @@
                 Irak,Iran,Egipto......
                 </div>
              </div>
+             <main>
+</main>
         </body>
         </html>
  
