--- a/oscarpaises.html
+++ b/oscarpaises.html
@@ -12,7 +12,8 @@
     <script src="oscarpaises.js" defer></script>
 </head>
 
-<body>
+<body style="background-color:#F0F1DF;">
+     
     <div class="container mt-4">
         <header class="mt-3">
             <div class="row">
