--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -52,15 +52,15 @@
                     </div>
                 </form>
             </div>
-            <div class="container mt-3">
-                <h2></h2>
-                <p> Pais Traducido</p>
-                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#divTRad" >Peru   جمهورية بيرو </button>
-                <div id="divTrad" class="collapse">
-                Irak,Iran,Egipto......
+             
+             <<div class="container mt-3">
+                <h2>Simple Collapsible</h2>
+                <p>Click on the button to toggle between showing and hiding content.</p>
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">  "مملكة إسبانيا" Español</button>
+                <div id="demo" class="collapse">
+                 egipto, libano,iran
                 </div>
-             </div>
-             <main>
+              </div>main>
 </main>
         </body>
         </html>
