--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +13,7 @@
 </head>
 </head>
 
-<body>
+<body style="background-color: rgb(201, 228, 246);">
     <div class="container mt-4">
         <header class="mt-3">
             <div class="row">
@@ -22,21 +24,21 @@
                 </div>
             </div>
         </header>
+        
         <div class="fade" id="divspecial">
-            <nav class="text-center" id="nav" >
+            <nav class="text-center" id="nav">
                 <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
-                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-info">Datos Geográficos</button>
-                <button disabled onclick="dameTraducciones()" type="button" id="b3" class="btn btn-info">Traducciones</button>
-                <button disabled  onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
+                <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2" class="btn btn-info">DatosGeográficos</button>
+                <button disabled onclick="dameTraducciones()" type="button" id="b3"class="btn btn-info">Traducciones</button>
+                <button disabled onclick="dameBanderas()" type="button" id="b4" class="btn btn-info">Banderas</button>
             </nav>
         </div>
-        <div class="tab-content mt-4">
-            <div id="datosgenerales" class="container tab-pane active"><br>
-                <form action="" method="post">
-                    <div class="row">
-                        <div class="col">
-                        Continente:<select name="continente" class="form-select-sm" onchange="cargarPaises(this.value)">
-                                <option value="0">Elige un continente</option>
+        <div class="row nt-5">
+            <div class="col">
+                <h2>Seleccione continente</h2>
+                <label for="sel1" class=" form select bg - success" name="sel1" onchange="cargarPaises(this.value)"></label>
+                        <select class="form-select-sm" >
+                                <option value="0">Sewlecciona continente.......</option>
                                 <option value="africa">Africa</option>
                                 <option value="americas">America</option>
                                 <option value="asia">Asia</option>
@@ -45,23 +47,14 @@
                             </select>
                         </div>
                         <div class="col">
-                            País:<select onchange=cargarDatos(this.value) id="paises" name="pais" class="form-select-sm">
-                                <option value="0">Elige un país</option>
+                            <h2> seleccione País</h2>
+                            <label for="sel2" class="form-level"></label>
+                            <select class="form-select-sm bg-succees" name="sel2" id="paises" onchange=cargarDates(this.value)>
+                                <option></option>
                             </select>
                         </div>
                     </div>
-                </form>
-            </div>
-             
-             <<div class="container mt-3">
-                <h2>Simple Collapsible</h2>
-                <p>Click on the button to toggle between showing and hiding content.</p>
-                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">  "مملكة إسبانيا" Español</button>
-                <div id="demo" class="collapse">
-                 egipto, libano,iran
-                </div>
-              </div>main>
-</main>
-        </body>
-        </html>
- 
+            <main> </main>
+</body>
+
+</html>
