--- a/GeneralEduardo.html
+++ b/GeneralEduardo.html
@@ -13,7 +13,7 @@
 </head>
 </head>
 
-<body style="background-color: rgb(201, 228, 246);">
+<body style="background-color:rgb(201, 228, 246);">
     <div class="container mt-4">
         <header class="mt-3">
             <div class="row">
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </header>
-        
+
         <div class="fade" id="divspecial">
             <nav class="text-center" id="nav">
                 <button disabled onclick="dameDatosGenerales()" id="b1" class="btn btn-info">Datos Generales</button>
@@ -38,7 +38,7 @@
                 <h2>Seleccione continente</h2>
                 <label for="sel1" class=" form select bg - success" name="sel1" onchange="cargarPaises(this.value)"></label>
                         <select class="form-select-sm" >
-                                <option value="0">Sewlecciona continente.......</option>
+                                <option value="0">Selecciona continente......</option>
                                 <option value="africa">Africa</option>
                                 <option value="americas">America</option>
                                 <option value="asia">Asia</option>
@@ -49,7 +49,7 @@
                         <div class="col">
                             <h2> seleccione País</h2>
                             <label for="sel2" class="form-level"></label>
-                            <select class="form-select-sm bg-succees" name="sel2" id="paises" onchange=cargarDates(this.value)>
+                            <select class="form-select-sm bg-succees" name="sel2" id="paises" onchange=cargarDatos(this.value)>
                                 <option></option>
                             </select>
                         </div>
