--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -26,7 +26,7 @@
     <div class="container mt-3" id="divSpecial">
       <ul class="nav nav-pills nav-justified">
         <li class="nav-item">
-          <button disabled class="nav-link active bg-success" href="#" onclick="dameDatosGenerales()">Datos
+          <button disabled class="nav-link active bg-success" href="#" onclick="pintaDatosGenerales()">Datos
             generales</button>
         </li>
         <li class="nav-item">
