--- a/Denis.html
+++ b/Denis.html
@@ -12,7 +12,7 @@
     <script src="denis.js" defer></script>
 </head>
 
-<body>
+<body class="bg-light">
     <div class="container mt-4">
         <header class="mt-3">
             <div class="row">
