3 pistoleros hemos modificado

--- a/paises/index.html
+++ b/paises/index.html
@@ -15,9 +15,7 @@
 </head>
 
 <body>
-    <div id="spinner">
-        <img src="img/GIF_Mundo_Banderas.gif" width="80px">
-    </div>
+    <div id="spinner"><img src="img/GIF_Mundo_Banderas.gif" width="80px"></div>
     <main>
         <div class="container-fluid">
             <header>
