3 pistoleros hemos modificado

--- a/paises/index.html
+++ b/paises/index.html
@@ -137,11 +137,11 @@
                                     <div class="col-3 text-center" id="geoflag">
                                     </div>
                                     <div class="col-3 text-left">
-                                        <h6 class="mb-3">Cantidad de vecinos</h6>
+                                        <h6 class="mb-3">Cantidad de países</h6>
                                         <ul class="list-group list-group-flush" id="geoCantVec"></ul>
                                     </div>
                                     <div class="col-3 text-left">
-                                        <h6 class="mb-3">Territorios de vecinos</h6>
+                                        <h6 class="mb-3">Países</h6>
                                         <ul class="list-group list-group-flush" id="geoTerrVec"></ul>
                                     </div>
                                     <div class="col-3 text-left">
