--- a/restcountries.html
+++ b/restcountries.html
@@ -32,7 +32,7 @@
                     GENERALES</button>
                 <button disabled onclick="pintaDatosGeograficos()" type="button" id="b2"
                     class="btn btn-outline-light">DATOS GEOGRAFICOS</button>
-                <button disabled type="button" id="b3" class="btn btn-outline-light" onclick="dameTraducciones()">TRADUCCIONES</button>
+                <button disabled type="button" id="divTrad" class="btn btn-outline-light" onclick="dameTraducciones()">TRADUCCIONES</button>
                 <button disabled onclick="dameBanderas()" type="button" id="b4"
                     class="btn btn-outline-light">BANDERAS</button>
             </nav>
