--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <h1>soy index</h1>
+<form action="index.jsp" method="get">
+texto: <input type="text" name="texto"> <br>
+<button type="submit">enviar</button>
+</form>
 </body>
 </html>
